website/versioned_docs/0.43/animations.md
---
id: version-0.43-animations
title: animations
original_id: animations
---
<a id="content"></a><h1><a class="anchor" name="animations"></a>Animations <a class="hash-link" href="docs/animations.html#animations">#</a></h1><div><p>Animations are very important to create a great user experience.
Stationary objects must overcome inertia as they start moving.
Objects in motion have momentum and rarely come to a stop immediately.
Animations allow you to convey physically believable motion in your interface.</p><p>React Native provides two complementary animation systems:
<a href="docs/animations.html#animated-api" target="_blank"><code>Animated</code></a> for granular and interactive control of specific values, and
<a href="docs/animations.html#layoutanimation" target="_blank"><code>LayoutAnimation</code></a> for animated global layout transactions.</p><h2><a class="anchor" name="animated-api"></a><code>Animated</code> API <a class="hash-link" href="docs/animations.html#animated-api">#</a></h2><p>The <a href="docs/animated.html" target="_blank"><code>Animated</code></a> API is designed to make it very easy to concisely express a wide variety of interesting animation and interaction patterns in a very performant way.
<code>Animated</code> focuses on declarative relationships between inputs and outputs, with configurable transforms in between, and simple <code>start</code>/<code>stop</code> methods to control time-based animation execution.</p><p><code>Animated</code> exports four animatable component types: <code>View</code>, <code>Text</code>, <code>Image</code>, and <code>ScrollView</code>, but you can also create your own using <code>Animated.createAnimatedComponent()</code>.</p><p>For example, a container view that fades in when it is mounted may look like this:</p><div class="prism language-javascript"><span class="token comment" spellcheck="true">// FadeInView.js
</span>import React<span class="token punctuation">,</span> <span class="token punctuation">{</span> Component <span class="token punctuation">}</span> from <span class="token string">'react'</span><span class="token punctuation">;</span>
import <span class="token punctuation">{</span>
  Animated<span class="token punctuation">,</span>
<span class="token punctuation">}</span> from <span class="token string">'react-native'</span><span class="token punctuation">;</span>

class <span class="token class-name">FadeInView</span> extends <span class="token class-name">Component</span> <span class="token punctuation">{</span>
  <span class="token function">constructor<span class="token punctuation">(</span></span>props<span class="token punctuation">)</span> <span class="token punctuation">{</span>
    <span class="token function">super<span class="token punctuation">(</span></span>props<span class="token punctuation">)</span><span class="token punctuation">;</span>
    <span class="token keyword">this</span><span class="token punctuation">.</span>state <span class="token operator">=</span> <span class="token punctuation">{</span>
      fadeAnim<span class="token punctuation">:</span> <span class="token keyword">new</span> <span class="token class-name">Animated<span class="token punctuation">.</span>Value</span><span class="token punctuation">(</span><span class="token number">0</span><span class="token punctuation">)</span><span class="token punctuation">,</span>         <span class="token comment" spellcheck="true"> // Initial value for opacity: 0
</span>    <span class="token punctuation">}</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span>
  <span class="token function">componentDidMount<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
    Animated<span class="token punctuation">.</span><span class="token function">timing<span class="token punctuation">(</span></span>                           <span class="token comment" spellcheck="true"> // Animate over time
</span>      <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>fadeAnim<span class="token punctuation">,</span>                     <span class="token comment" spellcheck="true"> // The animated value to drive
</span>      <span class="token punctuation">{</span>
        toValue<span class="token punctuation">:</span> <span class="token number">1</span><span class="token punctuation">,</span>                            <span class="token comment" spellcheck="true"> // Animate to opacity: 1, or fully opaque
</span>      <span class="token punctuation">}</span>
    <span class="token punctuation">)</span><span class="token punctuation">.</span><span class="token function">start<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>                                 <span class="token comment" spellcheck="true"> // Starts the animation
</span>  <span class="token punctuation">}</span>
  <span class="token function">render<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
    <span class="token keyword">return</span> <span class="token punctuation">(</span>
      &lt;Animated<span class="token punctuation">.</span>View                           <span class="token comment" spellcheck="true"> // Special animatable View
</span>        style<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">{</span>
          <span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token keyword">this</span><span class="token punctuation">.</span>props<span class="token punctuation">.</span>style<span class="token punctuation">,</span>
          opacity<span class="token punctuation">:</span> <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>fadeAnim<span class="token punctuation">,</span>         <span class="token comment" spellcheck="true"> // Bind opacity to animated value
</span>        <span class="token punctuation">}</span><span class="token punctuation">}</span>
      <span class="token operator">&gt;</span>
        <span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>props<span class="token punctuation">.</span>children<span class="token punctuation">}</span>
      &lt;<span class="token operator">/</span>Animated<span class="token punctuation">.</span>View<span class="token operator">&gt;</span>
    <span class="token punctuation">)</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span>
<span class="token punctuation">}</span>

module<span class="token punctuation">.</span>exports <span class="token operator">=</span> FadeInView<span class="token punctuation">;</span></div><p>You can then use your <code>FadeInView</code> in place of a <code>View</code> in your components, like so:</p><div class="prism language-javascript"><span class="token function">render<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
  <span class="token keyword">return</span> <span class="token punctuation">(</span>
    &lt;FadeInView style<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">{</span>width<span class="token punctuation">:</span> <span class="token number">250</span><span class="token punctuation">,</span> height<span class="token punctuation">:</span> <span class="token number">50</span><span class="token punctuation">,</span> backgroundColor<span class="token punctuation">:</span> <span class="token string">'powderblue'</span><span class="token punctuation">}</span><span class="token punctuation">}</span><span class="token operator">&gt;</span>
      &lt;Text style<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">{</span>fontSize<span class="token punctuation">:</span> <span class="token number">28</span><span class="token punctuation">,</span> textAlign<span class="token punctuation">:</span> <span class="token string">'center'</span><span class="token punctuation">,</span> margin<span class="token punctuation">:</span> <span class="token number">10</span><span class="token punctuation">}</span><span class="token punctuation">}</span><span class="token operator">&gt;</span>Fading <span class="token keyword">in</span>&lt;<span class="token operator">/</span>Text<span class="token operator">&gt;</span>
    &lt;<span class="token operator">/</span>FadeInView<span class="token operator">&gt;</span>
  <span class="token punctuation">)</span>
<span class="token punctuation">}</span></div><p><img src="img/AnimatedFadeInView.gif" alt="FadeInView"></p><p>Let's break down what's happening here.
In the <code>FadeInView</code> constructor, a new <code>Animated.Value</code> called <code>fadeAnim</code> is initialized as part of <code>state</code>.
The opacity property on the <code>View</code> is mapped to this animated value.
Behind the scenes, the numeric value is extracted and used to set opacity.</p><p>When the component mounts, the opacity is set to 0.
Then, an easing animation is started on the <code>fadeAnim</code> animated value,
which will update all of its dependent mappings (in this case, just the opacity) on each frame as the value animates to the final value of 1.</p><p>This is done in an optimized way that is faster than calling <code>setState</code> and re-rendering.<br>Because the entire configuration is declarative, we will be able to implement further optimizations that serialize the configuration and runs the animation on a high-priority thread.</p><h3><a class="anchor" name="configuring-animations"></a>Configuring animations <a class="hash-link" href="docs/animations.html#configuring-animations">#</a></h3><p>Animations are heavily configurable. Custom and predefined easing functions, delays, durations, decay factors, spring constants, and more can all be tweaked depending on the type of animation.</p><p><code>Animated</code> provides several animation types, the most commonly used one being <a href="docs/animated.html#timing" target="_blank"><code>Animated.timing()</code></a>.
It supports animating a value over time using one of various predefined easing functions, or you can use your own.
Easing functions are typically used in animation to convey gradual acceleration and deceleration of objects.</p><p>By default, <code>timing</code> will use a easeInOut curve that conveys gradual acceleration to full speed and concludes by gradually decelerating to a stop.
You can specify a different easing function by passing a <code>easing</code> parameter.
Custom <code>duration</code> or even a <code>delay</code> before the animation starts is also supported.</p><p>For example, if we want to create a 2-second long animation of an object that slightly backs up before moving to its final position:</p><div class="prism language-javascript">Animated<span class="token punctuation">.</span><span class="token function">timing<span class="token punctuation">(</span></span>
  <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>xPosition<span class="token punctuation">,</span>
  <span class="token punctuation">{</span>
    toValue<span class="token punctuation">:</span> <span class="token number">100</span><span class="token punctuation">,</span>
    easing<span class="token punctuation">:</span> Easing<span class="token punctuation">.</span>back<span class="token punctuation">,</span>
    duration<span class="token punctuation">:</span> <span class="token number">2000</span><span class="token punctuation">,</span>
  <span class="token punctuation">}</span>                              
<span class="token punctuation">)</span><span class="token punctuation">.</span><span class="token function">start<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span></div><p>Take a look at the <a href="docs/animated.html#configuring-animations" target="_blank">Configuring animations</a> section of the <code>Animated</code> API reference to learn more about all the config parameters supported by the built-in animations.</p><h3><a class="anchor" name="composing-animations"></a>Composing animations <a class="hash-link" href="docs/animations.html#composing-animations">#</a></h3><p>Animations can be combined and played in sequence or in parallel.
Sequential animations can play immediately after the previous animation has finished,
or they can start after a specified delay.
The <code>Animated</code> API provides several methods, such as <code>sequence()</code> and <code>delay()</code>,
each of which simply take an array of animations to execute and automatically calls <code>start()</code>/<code>stop()</code> as needed.</p><p>For example, the following animation coasts to a stop, then it springs back while twirling in parallel:</p><div class="prism language-javascript">Animated<span class="token punctuation">.</span><span class="token function">sequence<span class="token punctuation">(</span></span><span class="token punctuation">[</span>           <span class="token comment" spellcheck="true"> // decay, then spring to start and twirl
</span>  Animated<span class="token punctuation">.</span><span class="token function">decay<span class="token punctuation">(</span></span>position<span class="token punctuation">,</span> <span class="token punctuation">{</span>  <span class="token comment" spellcheck="true"> // coast to a stop
</span>    velocity<span class="token punctuation">:</span> <span class="token punctuation">{</span>x<span class="token punctuation">:</span> gestureState<span class="token punctuation">.</span>vx<span class="token punctuation">,</span> y<span class="token punctuation">:</span> gestureState<span class="token punctuation">.</span>vy<span class="token punctuation">}</span><span class="token punctuation">,</span><span class="token comment" spellcheck="true"> // velocity from gesture release
</span>    deceleration<span class="token punctuation">:</span> <span class="token number">0.997</span><span class="token punctuation">,</span>
  <span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">,</span>
  Animated<span class="token punctuation">.</span><span class="token function">parallel<span class="token punctuation">(</span></span><span class="token punctuation">[</span>         <span class="token comment" spellcheck="true"> // after decay, in parallel:
</span>    Animated<span class="token punctuation">.</span><span class="token function">spring<span class="token punctuation">(</span></span>position<span class="token punctuation">,</span> <span class="token punctuation">{</span>
      toValue<span class="token punctuation">:</span> <span class="token punctuation">{</span>x<span class="token punctuation">:</span> <span class="token number">0</span><span class="token punctuation">,</span> y<span class="token punctuation">:</span> <span class="token number">0</span><span class="token punctuation">}</span>   <span class="token comment" spellcheck="true"> // return to start
</span>    <span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">,</span>
    Animated<span class="token punctuation">.</span><span class="token function">timing<span class="token punctuation">(</span></span>twirl<span class="token punctuation">,</span> <span class="token punctuation">{</span>  <span class="token comment" spellcheck="true"> // and twirl
</span>      toValue<span class="token punctuation">:</span> <span class="token number">360</span><span class="token punctuation">,</span>
    <span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">,</span>
  <span class="token punctuation">]</span><span class="token punctuation">)</span><span class="token punctuation">,</span>
<span class="token punctuation">]</span><span class="token punctuation">)</span><span class="token punctuation">.</span><span class="token function">start<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>                   <span class="token comment" spellcheck="true"> // start the sequence group</span></div><p>If one animation is stopped or interrupted, then all other animations in the group are also stopped.
<code>Animated.parallel</code> has a <code>stopTogether</code> option that can be set to <code>false</code> to disable this.</p><p>You can find a full list of composition methods in the <a href="docs/animated.html#composing-animations" target="_blank">Composing animations</a> section of the <code>Animated</code> API reference.</p><h3><a class="anchor" name="combining-animated-values"></a>Combining animated values <a class="hash-link" href="docs/animations.html#combining-animated-values">#</a></h3><p>You can <a href="docs/animated.html#combining-animated-values" target="_blank">combine two animated values</a> via addition, multiplication, division, or modulo to make a new animated value.</p><p>There are some cases where an animated value needs to invert another animated value for calculation.
An example is inverting a scale (2x --&gt; 0.5x):</p><div class="prism language-javascript">const a <span class="token operator">=</span> Animated<span class="token punctuation">.</span><span class="token function">Value<span class="token punctuation">(</span></span><span class="token number">1</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
const b <span class="token operator">=</span> Animated<span class="token punctuation">.</span><span class="token function">divide<span class="token punctuation">(</span></span><span class="token number">1</span><span class="token punctuation">,</span> a<span class="token punctuation">)</span><span class="token punctuation">;</span>

Animated<span class="token punctuation">.</span><span class="token function">spring<span class="token punctuation">(</span></span>a<span class="token punctuation">,</span> <span class="token punctuation">{</span>
  toValue<span class="token punctuation">:</span> <span class="token number">2</span><span class="token punctuation">,</span>
<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">.</span><span class="token function">start<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span></div><h3><a class="anchor" name="interpolation"></a>Interpolation <a class="hash-link" href="docs/animations.html#interpolation">#</a></h3><p>Each property can be run through an interpolation first.
An interpolation maps input ranges to output ranges,
typically using a linear interpolation but also supports easing functions.
By default, it will extrapolate the curve beyond the ranges given, but you can also have it clamp the output value.</p><p>A simple mapping to convert a 0-1 range to a 0-100 range would be:</p><div class="prism language-javascript">value<span class="token punctuation">.</span><span class="token function">interpolate<span class="token punctuation">(</span></span><span class="token punctuation">{</span>
  inputRange<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token number">0</span><span class="token punctuation">,</span> <span class="token number">1</span><span class="token punctuation">]</span><span class="token punctuation">,</span>
  outputRange<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token number">0</span><span class="token punctuation">,</span> <span class="token number">100</span><span class="token punctuation">]</span><span class="token punctuation">,</span>
<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">;</span></div><p>For example, you may want to think about your <code>Animated.Value</code> as going from 0 to 1,
but animate the position from 150px to 0px and the opacity from 0 to 1.
This can easily be done by modifying <code>style</code> from the example above like so:</p><div class="prism language-javascript">  style<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">{</span>
    opacity<span class="token punctuation">:</span> <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>fadeAnim<span class="token punctuation">,</span><span class="token comment" spellcheck="true"> // Binds directly
</span>    transform<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token punctuation">{</span>
      translateY<span class="token punctuation">:</span> <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>fadeAnim<span class="token punctuation">.</span><span class="token function">interpolate<span class="token punctuation">(</span></span><span class="token punctuation">{</span>
        inputRange<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token number">0</span><span class="token punctuation">,</span> <span class="token number">1</span><span class="token punctuation">]</span><span class="token punctuation">,</span>
        outputRange<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token number">150</span><span class="token punctuation">,</span> <span class="token number">0</span><span class="token punctuation">]</span> <span class="token comment" spellcheck="true"> // 0 : 150, 0.5 : 75, 1 : 0
</span>      <span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">,</span>
    <span class="token punctuation">}</span><span class="token punctuation">]</span><span class="token punctuation">,</span>
  <span class="token punctuation">}</span><span class="token punctuation">}</span></div><p><a href="docs/animated.html#interpolate" target="_blank"><code>interpolate()</code></a> supports multiple range segments as well, which is handy for defining dead zones and other handy tricks.
For example, to get an negation relationship at -300 that goes to 0 at -100, then back up to 1 at 0, and then back down to zero at 100 followed by a dead-zone that remains at 0 for everything beyond that, you could do:</p><div class="prism language-javascript">value<span class="token punctuation">.</span><span class="token function">interpolate<span class="token punctuation">(</span></span><span class="token punctuation">{</span>
  inputRange<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token operator">-</span><span class="token number">300</span><span class="token punctuation">,</span> <span class="token operator">-</span><span class="token number">100</span><span class="token punctuation">,</span> <span class="token number">0</span><span class="token punctuation">,</span> <span class="token number">100</span><span class="token punctuation">,</span> <span class="token number">101</span><span class="token punctuation">]</span><span class="token punctuation">,</span>
  outputRange<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token number">300</span><span class="token punctuation">,</span>    <span class="token number">0</span><span class="token punctuation">,</span> <span class="token number">1</span><span class="token punctuation">,</span>   <span class="token number">0</span><span class="token punctuation">,</span>   <span class="token number">0</span><span class="token punctuation">]</span><span class="token punctuation">,</span>
<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">;</span></div><p>Which would map like so:</p><div class="prism language-javascript">Input <span class="token operator">|</span> Output
<span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">|</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">--</span><span class="token operator">-</span>
  <span class="token operator">-</span><span class="token number">400</span><span class="token operator">|</span>    <span class="token number">450</span>
  <span class="token operator">-</span><span class="token number">300</span><span class="token operator">|</span>    <span class="token number">300</span>
  <span class="token operator">-</span><span class="token number">200</span><span class="token operator">|</span>    <span class="token number">150</span>
  <span class="token operator">-</span><span class="token number">100</span><span class="token operator">|</span>      <span class="token number">0</span>
   <span class="token operator">-</span><span class="token number">50</span><span class="token operator">|</span>    <span class="token number">0.5</span>
     <span class="token number">0</span><span class="token operator">|</span>      <span class="token number">1</span>
    <span class="token number">50</span><span class="token operator">|</span>    <span class="token number">0.5</span>
   <span class="token number">100</span><span class="token operator">|</span>      <span class="token number">0</span>
   <span class="token number">101</span><span class="token operator">|</span>      <span class="token number">0</span>
   <span class="token number">200</span><span class="token operator">|</span>      <span class="token number">0</span></div><p><code>interpolate()</code> also supports mapping to strings, allowing you to animate colors as well as values with units. For example, if you wanted to animate a rotation you could do:</p><div class="prism language-javascript">value<span class="token punctuation">.</span><span class="token function">interpolate<span class="token punctuation">(</span></span><span class="token punctuation">{</span>
  inputRange<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token number">0</span><span class="token punctuation">,</span> <span class="token number">360</span><span class="token punctuation">]</span><span class="token punctuation">,</span>
  outputRange<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token string">'0deg'</span><span class="token punctuation">,</span> <span class="token string">'360deg'</span><span class="token punctuation">]</span>
<span class="token punctuation">}</span><span class="token punctuation">)</span></div><p><code>interpolate()</code> also supports arbitrary easing functions, many of which are already implemented in the
<a href="docs/easing.html" target="_blank"><code>Easing</code></a> module.
<code>interpolate()</code> also has configurable behavior for extrapolating the <code>outputRange</code>.
You can set the extrapolation by setting the <code>extrapolate</code>, <code>extrapolateLeft</code>, or <code>extrapolateRight</code> options.
The default value is <code>extend</code> but you can use <code>clamp</code> to prevent the output value from exceeding <code>outputRange</code>.</p><h3><a class="anchor" name="tracking-dynamic-values"></a>Tracking dynamic values <a class="hash-link" href="docs/animations.html#tracking-dynamic-values">#</a></h3><p>Animated values can also track other values.
Just set the <code>toValue</code> of an animation to another animated value instead of a plain number.
For example, a "Chat Heads" animation like the one used by Messenger on Android could be implemented with a <code>spring()</code> pinned on another animated value, or with <code>timing()</code> and a <code>duration</code> of 0 for rigid tracking.
They can also be composed with interpolations:</p><div class="prism language-javascript">Animated<span class="token punctuation">.</span><span class="token function">spring<span class="token punctuation">(</span></span>follower<span class="token punctuation">,</span> <span class="token punctuation">{</span>toValue<span class="token punctuation">:</span> leader<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">.</span><span class="token function">start<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>
Animated<span class="token punctuation">.</span><span class="token function">timing<span class="token punctuation">(</span></span>opacity<span class="token punctuation">,</span> <span class="token punctuation">{</span>
  toValue<span class="token punctuation">:</span> pan<span class="token punctuation">.</span>x<span class="token punctuation">.</span><span class="token function">interpolate<span class="token punctuation">(</span></span><span class="token punctuation">{</span>
    inputRange<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token number">0</span><span class="token punctuation">,</span> <span class="token number">300</span><span class="token punctuation">]</span><span class="token punctuation">,</span>
    outputRange<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token number">1</span><span class="token punctuation">,</span> <span class="token number">0</span><span class="token punctuation">]</span><span class="token punctuation">,</span>
  <span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">,</span>
<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">.</span><span class="token function">start<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span></div><p>The <code>leader</code> and <code>follower</code> animated values would be implemented using <code>Animated.ValueXY()</code>.
<code>ValueXY</code> is a handy way to deal with 2D interactions, such as panning or dragging.
It is a simple wrapper that basically contains two <code>Animated.Value</code> instances and some helper functions that call through to them,
making <code>ValueXY</code> a drop-in replacement for <code>Value</code> in many cases.
It allows us to track both x and y values in the example above.</p><h3><a class="anchor" name="tracking-gestures"></a>Tracking gestures <a class="hash-link" href="docs/animations.html#tracking-gestures">#</a></h3><p>Gestures, like panning or scrolling, and other events can map directly to animated values using <a href="docs/animated.html#event" target="_blank"><code>Animated.event</code></a>.
This is done with a structured map syntax so that values can be extracted from complex event objects.
The first level is an array to allow mapping across multiple args, and that array contains nested objects.</p><p>For example, when working with horizontal scrolling gestures,
you would do the following in order to map <code>event.nativeEvent.contentOffset.x</code> to <code>scrollX</code> (an <code>Animated.Value</code>):</p><div class="prism language-javascript"> onScroll<span class="token operator">=</span><span class="token punctuation">{</span>Animated<span class="token punctuation">.</span><span class="token function">event<span class="token punctuation">(</span></span>
  <span class="token comment" spellcheck="true"> // scrollX = e.nativeEvent.contentOffset.x
</span>   <span class="token punctuation">[</span><span class="token punctuation">{</span> nativeEvent<span class="token punctuation">:</span> <span class="token punctuation">{</span>
        contentOffset<span class="token punctuation">:</span> <span class="token punctuation">{</span>
          x<span class="token punctuation">:</span> scrollX
        <span class="token punctuation">}</span>
      <span class="token punctuation">}</span>
    <span class="token punctuation">}</span><span class="token punctuation">]</span>
 <span class="token punctuation">)</span><span class="token punctuation">}</span></div><p>When using <code>PanResponder</code>, you could use the following code to extract the x and y positions from <code>gestureState.dx</code> and <code>gestureState.dy</code>.
We use a <code>null</code> in the first position of the array, as we are only interested in the second argument passed to the <code>PanResponder</code> handler,
which is the <code>gestureState</code>.</p><div class="prism language-javascript">onPanResponderMove<span class="token operator">=</span><span class="token punctuation">{</span>Animated<span class="token punctuation">.</span><span class="token function">event<span class="token punctuation">(</span></span>
  <span class="token punctuation">[</span><span class="token keyword">null</span><span class="token punctuation">,</span><span class="token comment" spellcheck="true"> // ignore the native event
</span> <span class="token comment" spellcheck="true"> // extract dx and dy from gestureState
</span> <span class="token comment" spellcheck="true"> // like 'pan.x = gestureState.dx, pan.y = gestureState.dy'
</span>  <span class="token punctuation">{</span>dx<span class="token punctuation">:</span> pan<span class="token punctuation">.</span>x<span class="token punctuation">,</span> dy<span class="token punctuation">:</span> pan<span class="token punctuation">.</span>y<span class="token punctuation">}</span>
<span class="token punctuation">]</span><span class="token punctuation">)</span><span class="token punctuation">}</span></div><h3><a class="anchor" name="responding-to-the-current-animation-value"></a>Responding to the current animation value <a class="hash-link" href="docs/animations.html#responding-to-the-current-animation-value">#</a></h3><p>You may notice that there is no obvious way to read the current value while animating.
This is because the value may only be known in the native runtime due to optimizations.
If you need to run JavaScript in response to the current value, there are two approaches:</p><ul><li><code>spring.stopAnimation(callback)</code> will stop the animation and invoke <code>callback</code> with the final value. This is useful when making gesture transitions.</li><li><code>spring.addListener(callback)</code> will invoke <code>callback</code> asynchronously while the animation is running, providing a recent value.
This is useful for triggering state changes,
for example snapping a bobble to a new option as the user drags it closer,
because these larger state changes are less sensitive to a few frames of lag compared to continuous gestures like panning which need to run at 60 fps.</li></ul><p><code>Animated</code> is designed to be fully serializable so that animations can be run in a high performance way, independent of the normal JavaScript event loop.
This does influence the API, so keep that in mind when it seems a little trickier to do something compared to a fully synchronous system.
Check out <code>Animated.Value.addListener</code> as a way to work around some of these limitations,
but use it sparingly since it might have performance implications in the future.</p><h3><a class="anchor" name="using-the-native-driver"></a>Using the native driver <a class="hash-link" href="docs/animations.html#using-the-native-driver">#</a></h3><p>The <code>Animated</code> API is designed to be serializable.
By using the <a href="http://facebook.github.io/react-native/blog/2017/02/14/using-native-driver-for-animated.html" target="_blank">native driver</a>,
we send everything about the animation to native before starting the animation,
allowing native code to perform the animation on the UI thread without having to go through the bridge on every frame.
Once the animation has started, the JS thread can be blocked without affecting the animation.</p><p>Using the native driver for normal animations is quite simple.
Just add <code>useNativeDriver: true</code> to the animation config when starting it.</p><div class="prism language-javascript">Animated<span class="token punctuation">.</span><span class="token function">timing<span class="token punctuation">(</span></span><span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>animatedValue<span class="token punctuation">,</span> <span class="token punctuation">{</span>
  toValue<span class="token punctuation">:</span> <span class="token number">1</span><span class="token punctuation">,</span>
  duration<span class="token punctuation">:</span> <span class="token number">500</span><span class="token punctuation">,</span>
  useNativeDriver<span class="token punctuation">:</span> <span class="token boolean">true</span><span class="token punctuation">,</span><span class="token comment" spellcheck="true"> // &lt;-- Add this
</span><span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">.</span><span class="token function">start<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span></div><p>Animated values are only compatible with one driver so if you use native driver when starting an animation on a value,
make sure every animation on that value also uses the native driver.</p><p>The native driver also works with <code>Animated.event</code>.
This is specially useful for animations that follow the scroll position as without the native driver,
the animation will always run a frame behind the gesture due to the async nature of React Native.</p><div class="prism language-javascript">&lt;Animated<span class="token punctuation">.</span>ScrollView<span class="token comment" spellcheck="true"> // &lt;-- Use the Animated ScrollView wrapper
</span>  scrollEventThrottle<span class="token operator">=</span><span class="token punctuation">{</span><span class="token number">1</span><span class="token punctuation">}</span><span class="token comment" spellcheck="true"> // &lt;-- Use 1 here to make sure no events are ever missed
</span>  onScroll<span class="token operator">=</span><span class="token punctuation">{</span>Animated<span class="token punctuation">.</span><span class="token function">event<span class="token punctuation">(</span></span>
    <span class="token punctuation">[</span><span class="token punctuation">{</span> nativeEvent<span class="token punctuation">:</span> <span class="token punctuation">{</span> contentOffset<span class="token punctuation">:</span> <span class="token punctuation">{</span> y<span class="token punctuation">:</span> <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>animatedValue <span class="token punctuation">}</span> <span class="token punctuation">}</span> <span class="token punctuation">}</span><span class="token punctuation">]</span><span class="token punctuation">,</span>
    <span class="token punctuation">{</span> useNativeDriver<span class="token punctuation">:</span> <span class="token boolean">true</span> <span class="token punctuation">}</span><span class="token comment" spellcheck="true"> // &lt;-- Add this
</span>  <span class="token punctuation">)</span><span class="token punctuation">}</span>
<span class="token operator">&gt;</span>
  <span class="token punctuation">{</span>content<span class="token punctuation">}</span>
&lt;<span class="token operator">/</span>Animated<span class="token punctuation">.</span>ScrollView<span class="token operator">&gt;</span></div><p>You can see the native driver in action by running the <a href="https://github.com/facebook/react-native/blob/master/Examples/UIExplorer/" target="_blank">UIExplorer sample app</a>,
then loading the Native Animated Example.
You can also take a look at the <a href="https://github.com/facebook/react-native/blob/master/Examples/UIExplorer/js/NativeAnimationsExample.js" target="_blank">source code</a> to learn how these examples were produced.</p><h4><a class="anchor" name="caveats"></a>Caveats <a class="hash-link" href="docs/animations.html#caveats">#</a></h4><p>Not everything you can do with <code>Animated</code> is currently supported by the native driver.
The main limitation is that you can only animate non-layout properties:
things like <code>transform</code>, <code>opacity</code> and <code>backgroundColor</code> will work, but flexbox and position properties will not.
When using <code>Animated.event</code>, it will only work with direct events and not bubbling events.
This means it does not work with <code>PanResponder</code> but does work with things like <code>ScrollView#onScroll</code>.</p><h3><a class="anchor" name="additional-examples"></a>Additional examples <a class="hash-link" href="docs/animations.html#additional-examples">#</a></h3><p>The UIExplorer sample app has various examples of <code>Animated</code> in use:</p><ul><li><a href="https://github.com/facebook/react-native/tree/master/Examples/UIExplorer/js/AnimatedGratuitousApp" target="_blank">AnimatedGratuitousApp</a></li><li><a href="https://github.com/facebook/react-native/blob/master/Examples/UIExplorer/js/NativeAnimationsExample.js" target="_blank">NativeAnimationsExample</a></li></ul><h2><a class="anchor" name="layoutanimation-api"></a><code>LayoutAnimation</code> API <a class="hash-link" href="docs/animations.html#layoutanimation-api">#</a></h2><p><code>LayoutAnimation</code> allows you to globally configure <code>create</code> and <code>update</code>
animations that will be used for all views in the next render/layout cycle.
This is useful for doing flexbox layout updates without bothering to measure or
calculate specific properties in order to animate them directly, and is
especially useful when layout changes may affect ancestors, for example a "see
more" expansion that also increases the size of the parent and pushes down the
row below which would otherwise require explicit coordination between the
components in order to animate them all in sync.</p><p>Note that although <code>LayoutAnimation</code> is very powerful and can be quite useful,
it provides much less control than <code>Animated</code> and other animation libraries, so
you may need to use another approach if you can't get <code>LayoutAnimation</code> to do
what you want.</p><p>Note that in order to get this to work on <strong>Android</strong> you need to set the following flags via <code>UIManager</code>:</p><div class="prism language-javascript">UIManager<span class="token punctuation">.</span>setLayoutAnimationEnabledExperimental &amp;&amp; UIManager<span class="token punctuation">.</span><span class="token function">setLayoutAnimationEnabledExperimental<span class="token punctuation">(</span></span><span class="token boolean">true</span><span class="token punctuation">)</span><span class="token punctuation">;</span></div><p><img src="img/LayoutAnimationExample.gif" alt=""></p><div class="prism language-javascript">class <span class="token class-name">App</span> extends <span class="token class-name">React<span class="token punctuation">.</span>Component</span> <span class="token punctuation">{</span>
  <span class="token function">constructor<span class="token punctuation">(</span></span>props<span class="token punctuation">)</span> <span class="token punctuation">{</span>
    <span class="token function">super<span class="token punctuation">(</span></span>props<span class="token punctuation">)</span><span class="token punctuation">;</span>
    <span class="token keyword">this</span><span class="token punctuation">.</span>state <span class="token operator">=</span> <span class="token punctuation">{</span> w<span class="token punctuation">:</span> <span class="token number">100</span><span class="token punctuation">,</span> h<span class="token punctuation">:</span> <span class="token number">100</span> <span class="token punctuation">}</span><span class="token punctuation">;</span>
    <span class="token keyword">this</span><span class="token punctuation">.</span>_onPress <span class="token operator">=</span> <span class="token keyword">this</span><span class="token punctuation">.</span>_onPress<span class="token punctuation">.</span><span class="token function">bind<span class="token punctuation">(</span></span><span class="token keyword">this</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span>

  <span class="token function">componentWillMount<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
   <span class="token comment" spellcheck="true"> // Animate creation
</span>    LayoutAnimation<span class="token punctuation">.</span><span class="token function">spring<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span>

  <span class="token function">_onPress<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
   <span class="token comment" spellcheck="true"> // Animate the update
</span>    LayoutAnimation<span class="token punctuation">.</span><span class="token function">spring<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>
    <span class="token keyword">this</span><span class="token punctuation">.</span><span class="token function">setState<span class="token punctuation">(</span></span><span class="token punctuation">{</span>w<span class="token punctuation">:</span> <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>w <span class="token operator">+</span> <span class="token number">15</span><span class="token punctuation">,</span> h<span class="token punctuation">:</span> <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>h <span class="token operator">+</span> <span class="token number">15</span><span class="token punctuation">}</span><span class="token punctuation">)</span>
  <span class="token punctuation">}</span>

  <span class="token function">render<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
    <span class="token keyword">return</span> <span class="token punctuation">(</span>
      &lt;View style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>container<span class="token punctuation">}</span><span class="token operator">&gt;</span>
        &lt;View style<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span>styles<span class="token punctuation">.</span>box<span class="token punctuation">,</span> <span class="token punctuation">{</span>width<span class="token punctuation">:</span> <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>w<span class="token punctuation">,</span> height<span class="token punctuation">:</span> <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>h<span class="token punctuation">}</span><span class="token punctuation">]</span><span class="token punctuation">}</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
        &lt;TouchableOpacity onPress<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>_onPress<span class="token punctuation">}</span><span class="token operator">&gt;</span>
          &lt;View style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>button<span class="token punctuation">}</span><span class="token operator">&gt;</span>
            &lt;Text style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>buttonText<span class="token punctuation">}</span><span class="token operator">&gt;</span>Press me<span class="token operator">!</span>&lt;<span class="token operator">/</span>Text<span class="token operator">&gt;</span>
          &lt;<span class="token operator">/</span>View<span class="token operator">&gt;</span>
        &lt;<span class="token operator">/</span>TouchableOpacity<span class="token operator">&gt;</span>
      &lt;<span class="token operator">/</span>View<span class="token operator">&gt;</span>
    <span class="token punctuation">)</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span>
<span class="token punctuation">}</span></div><p><a href="https://rnplay.org/apps/uaQrGQ" target="_blank">Run this example</a></p><p>This example uses a preset value, you can customize the animations as
you need, see <a href="https://github.com/facebook/react-native/blob/master/Libraries/LayoutAnimation/LayoutAnimation.js" target="_blank">LayoutAnimation.js</a>
for more information.</p><h2><a class="anchor" name="additional-notes"></a>Additional notes <a class="hash-link" href="docs/animations.html#additional-notes">#</a></h2><h3><a class="anchor" name="requestanimationframe"></a><code>requestAnimationFrame</code> <a class="hash-link" href="docs/animations.html#requestanimationframe">#</a></h3><p><code>requestAnimationFrame</code> is a polyfill from the browser that you might be
familiar with. It accepts a function as its only argument and calls that
function before the next repaint. It is an essential building block for
animations that underlies all of the JavaScript-based animation APIs.  In
general, you shouldn't need to call this yourself - the animation APIs will
manage frame updates for you.</p><h3><a class="anchor" name="setnativeprops"></a><code>setNativeProps</code> <a class="hash-link" href="docs/animations.html#setnativeprops">#</a></h3><p>As mentioned <a href="docs/direct-manipulation.html" target="_blank">in the Direction Manipulation section</a>,
<code>setNativeProps</code> allows us to modify properties of native-backed
components (components that are actually backed by native views, unlike
composite components) directly, without having to <code>setState</code> and
re-render the component hierarchy.</p><p>We could use this in the Rebound example to update the scale - this
might be helpful if the component that we are updating is deeply nested
and hasn't been optimized with <code>shouldComponentUpdate</code>.</p><div class="prism language-javascript"><span class="token comment" spellcheck="true">// Back inside of the App component, replace the scrollSpring listener
</span><span class="token comment" spellcheck="true">// in componentWillMount with this:
</span><span class="token keyword">this</span><span class="token punctuation">.</span>_scrollSpring<span class="token punctuation">.</span><span class="token function">addListener<span class="token punctuation">(</span></span><span class="token punctuation">{</span>
  onSpringUpdate<span class="token punctuation">:</span> <span class="token punctuation">(</span><span class="token punctuation">)</span> <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token punctuation">{</span>
    <span class="token keyword">if</span> <span class="token punctuation">(</span><span class="token operator">!</span><span class="token keyword">this</span><span class="token punctuation">.</span>_photo<span class="token punctuation">)</span> <span class="token punctuation">{</span> <span class="token keyword">return</span> <span class="token punctuation">}</span>
    <span class="token keyword">var</span> v <span class="token operator">=</span> <span class="token keyword">this</span><span class="token punctuation">.</span>_scrollSpring<span class="token punctuation">.</span><span class="token function">getCurrentValue<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>
    <span class="token keyword">var</span> newProps <span class="token operator">=</span> <span class="token punctuation">{</span>style<span class="token punctuation">:</span> <span class="token punctuation">{</span>transform<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token punctuation">{</span>scaleX<span class="token punctuation">:</span> v<span class="token punctuation">}</span><span class="token punctuation">,</span> <span class="token punctuation">{</span>scaleY<span class="token punctuation">:</span> v<span class="token punctuation">}</span><span class="token punctuation">]</span><span class="token punctuation">}</span><span class="token punctuation">}</span><span class="token punctuation">;</span>
    <span class="token keyword">this</span><span class="token punctuation">.</span>_photo<span class="token punctuation">.</span><span class="token function">setNativeProps<span class="token punctuation">(</span></span>newProps<span class="token punctuation">)</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span><span class="token punctuation">,</span>
<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
<span class="token comment" spellcheck="true">
// Lastly, we update the render function to no longer pass in the
</span><span class="token comment" spellcheck="true">// transform via style (avoid clashes when re-rendering) and to set the
</span><span class="token comment" spellcheck="true">// photo ref
</span><span class="token function">render<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
  <span class="token keyword">return</span> <span class="token punctuation">(</span>
    &lt;View style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>container<span class="token punctuation">}</span><span class="token operator">&gt;</span>
      &lt;TouchableWithoutFeedback onPressIn<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>_onPressIn<span class="token punctuation">}</span> onPressOut<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>_onPressOut<span class="token punctuation">}</span><span class="token operator">&gt;</span>
        &lt;Image ref<span class="token operator">=</span><span class="token punctuation">{</span>component <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token keyword">this</span><span class="token punctuation">.</span>_photo <span class="token operator">=</span> component<span class="token punctuation">}</span>
               source<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">{</span>uri<span class="token punctuation">:</span> <span class="token string">"img/ReboundExample.png"</span><span class="token punctuation">}</span><span class="token punctuation">}</span>
               style<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">{</span>width<span class="token punctuation">:</span> <span class="token number">250</span><span class="token punctuation">,</span> height<span class="token punctuation">:</span> <span class="token number">200</span><span class="token punctuation">}</span><span class="token punctuation">}</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
      &lt;<span class="token operator">/</span>TouchableWithoutFeedback<span class="token operator">&gt;</span>
    &lt;<span class="token operator">/</span>View<span class="token operator">&gt;</span>
  <span class="token punctuation">)</span><span class="token punctuation">;</span>
<span class="token punctuation">}</span></div><p><a href="https://rnplay.org/apps/fUqjAg" target="_blank">Run this example</a></p><p>It would not make sense to use <code>setNativeProps</code> with react-tween-state
because the updated tween values are set on the state automatically by
the library - Rebound on the other hand gives us an updated value for
each frame with the <code>onSpringUpdate</code> function.</p><p>If you find your animations with dropping frames (performing below 60
frames per second), look into using <code>setNativeProps</code> or
<code>shouldComponentUpdate</code> to optimize them. You may also want to defer any
computationally intensive work until after animations are complete,
using the
<a href="docs/interactionmanager.html" target="_blank">InteractionManager</a>. You
can monitor the frame rate by using the In-App Developer Menu "FPS
Monitor" tool.</p></div><div class="docs-prevnext"><a class="docs-prev" href="docs/handling-touches.html#content">← Prev</a><a class="docs-next" href="docs/accessibility.html#content">Next →</a></div><p class="edit-page-block">You can <a target="_blank" href="https://github.com/facebook/react-native/blob/master/docs/Animations.md">edit the content above on GitHub</a> and send us a pull request!</p>